--- a/templates/app.yaml
+++ b/templates/app.yaml
@@ -55,6 +55,10 @@ Resources:
           FromPort: 80
           ToPort: 80
           SourceSecurityGroupId: !Ref AlbSG
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
       SecurityGroupEgress:
         - IpProtocol: -1
           CidrIp: 0.0.0.0/0
@@ -139,6 +143,22 @@ Resources:
         - Key: Name
           Value: !Sub "${EnvironmentName}-app"
           PropagateAtLaunch: true
+
+  BastionHost:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId: !Ref ImageId
+      InstanceType: !Ref InstanceType
+      KeyName: !Ref KeyPairName
+      NetworkInterfaces:
+        - AssociatePublicIpAddress: true
+          DeviceIndex: 0
+          SubnetId: !ImportValue
+            Fn::Sub: "${EnvironmentName}-PublicSubnet1Id"
+          GroupSet: [!Ref AppSG]
+      Tags:
+        - Key: Name
+          Value: !Sub "${EnvironmentName}-app-bastion"
 
 Outputs:
   AlbDNSName:
